--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.16.2",
+    "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.2",
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/react-redux": "^7.1.33",
     "react": "^18.3.1",
