--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@mui/material": "^5.16.2",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-redux": "^7.1.33",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
