--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.16.2",
     "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.2",
+    "@mui/x-data-grid": "^7.10.0",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/js-cookie": "^3.0.6",
