--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react-redux": "^7.1.33",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -35,6 +36,7 @@
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
