--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router": "^6.24.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/jwt-decode": "^3.1.0",
