--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.2",
     "@mui/x-data-grid": "^7.10.0",
+    "@mui/x-date-pickers": "^7.11.1",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/js-cookie": "^3.0.6",
     "@types/react-redux": "^7.1.33",
+    "dayjs": "^1.11.12",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
